featured overflow bug

--- a/src/Hoc/HomeContainer/homeContainer.module.css
+++ b/src/Hoc/HomeContainer/homeContainer.module.css
@@ -33,6 +33,6 @@
 	}
 
 	.Container {
-		min-height: 70vh;
+		min-height: 95vh;
 	}
 }
