--- a/src/components/HomePage/Testimonials/testimonials.module.css
+++ b/src/components/HomePage/Testimonials/testimonials.module.css
@@ -14,15 +14,15 @@
 
 .FaLeft,
 .FaRight {
-	color: grey;
-	opacity: 0.7;
+	color: rgb(212, 82, 238);
+	opacity: 0.4;
 	font-weight: 200;
 	z-index: 1;
 }
 
 .FaLeft:hover,
 .FaRight:hover {
-	opacity: 1;
+	opacity: 0.7;
 	cursor: pointer;
 }
 
@@ -97,4 +97,7 @@
 }
 
 @media (max-width: 30rem) {
+	.CarouselContainer {
+		width: 100%;
+	}
 }
